- Do not use Searcher interface below the prelude cluster searcher. - It is not necessary and provides no value. - It also hides some important aspects, like the schema. - And it simplifies testing.